package DesiginPatternHomework.Factory;

public interface Laptop {
    String getBrand();
    String getModel();
    void start();
    void shutdown();
    void displaySpecs();
}